--- a/src/main/resources/templates/include/layout.html
+++ b/src/main/resources/templates/include/layout.html
@@ -5,13 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+	<title>커리어넷</title>
     
     <!-- 헤더css -->
     <link rel="stylesheet" th:href="@{/css/layout.css}">
     <script th:src="@{/js/jquery.js}"></script>
     
     <script th:src="@{/js/layout.js}"></script>
+    
+    <!-- student css -->
+    <link rel="stylesheet" th:href="@{/css/student.css}">
+    <link rel="stylesheet" th:href="@{/css/reset.css}">
+    <!-- consulting css -->
+    <link rel="stylesheet" th:href="@{/css/consulting.css}">
 </head>
 <body>
 
