add feat: boardWrite > except writer

--- a/src/main/resources/templates/include/layout.html
+++ b/src/main/resources/templates/include/layout.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" th:href="@{/css/student.css}">
     <link rel="stylesheet" th:href="@{/css/reset.css}">
     <!-- consulting css -->
+    <link rel="stylesheet" th:href="@{/css/consulting_common.css}">
     <link rel="stylesheet" th:href="@{/css/consulting.css}">
 </head>
 <body>
