--- a/src/main/resources/templates/include/layout.html
+++ b/src/main/resources/templates/include/layout.html
@@ -69,7 +69,7 @@
                         진로문제로 고민하는 학생·학부모를 위해 진로상담 서비스를 제공합니다.
                     </p>
                 <ul class="submenu-list"><!-- position absolute -->
-                    <li><a href="#">상담신청</a></li>
+                    <li><a th:href="@{../consulting/write}">상담신청</a></li>
                     <li><a href="#">상담보기</a></li>
                 </ul>
                 </div>
