--- a/src/main/resources/templates/include/layout.html
+++ b/src/main/resources/templates/include/layout.html
@@ -19,6 +19,8 @@
     <!-- consulting css -->
     <link rel="stylesheet" th:href="@{/css/consulting_common.css}">
     <link rel="stylesheet" th:href="@{/css/consulting.css}">
+    <!--Teacher join css-->
+	<link rel="stylesheet" th:href="@{/css/join.css}">
 </head>
 <body>
 
