승용 0809 메인화면+각 블로그 갈수있는 허브페이지

--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -105,6 +105,7 @@ header{
 }
 .submenuHide{
     position: absolute;
+    z-index: 999;
     top: 50px;
     left: 0;
     width: 100%;
@@ -255,6 +256,3 @@ ul .m .submenu-list li a{
     color: #2e3434;
 }
 
-#wrap{
-	height: 400px;
-}
