--- a/src/main/resources/templates/include/layout.html
+++ b/src/main/resources/templates/include/layout.html
@@ -32,7 +32,7 @@
 
         <div class="topMenu">
             <ul>
-                <li><a href="#">로그인</a></li>
+                <li><a th:href="@{/main/login}">로그인</a></li>
                 <li><a href="#">회원가입</a></li>
                 <li><a href="#">아이디/비밀번호 찾기</a></li>
             </ul>
