--- a/src/main/resources/templates/main/login.html
+++ b/src/main/resources/templates/main/login.html
@@ -12,8 +12,10 @@
             <input class="login-input" type="password" name="pw" placeholder="비밀번호">
           </div>
           <input class="login-btn" type="submit" value="로그인">
+		  <div class="signup-wrap">
+		    <a th:href="@{signup}">회원이 아니라면? 회원가입 </a>			
+		  </div>
         </div>
-        <a href="#">회원가입</a>
       </form>
     </div>
   </div>
