거의 최종본 승용

--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -76,7 +76,7 @@
 					<div class="bx-wrapper" style="max-width: 254px;"><div class="bx-viewport" aria-live="polite" style="width: 100%; overflow: hidden; position: relative; height: 226px;"><ul class="banner-slider bxslider" style="width: 4215%; position: relative; transition-duration: 0s; transform: translate3d(-507.986px, 0px, 0px);"><li style="float: left; list-style: none; position: relative; width: 254px;" class="bx-clone" aria-hidden="true">
 							<h4 class="banner-title">블랜디드 수업자료</h4>
 							<a href="/cnet/front/eduInfo/blended.do" target="_self">
-								<img src="@{/img/main/bannerImgPath.do?bnr_ser=1011707}" alt="블렌디드 수업자료 안내 GO">
+								<img src="" alt="블렌디드 수업자료 안내 GO">
 							</a>
 						</li>
 					
