--- a/src/main/resources/static/css/syBody.css
+++ b/src/main/resources/static/css/syBody.css
@@ -703,9 +703,9 @@ em {
     display: inline-block;
 }
 
-.pagination strong {
+.pagination .onHere {
     position: relative;
-    width: 13px;
+    width: 26px;
     display: inline-block;
     color: #ff6600;
     vertical-align: middle;
@@ -714,6 +714,7 @@ em {
     padding: 8px 8px 5px 8px;
     margin: 0 -1px 0 -1px;
     font-size: 12px;
+    font-weight: bold;
 }
 /* 직업백과 상세보기!~!~!~! */
 .job_wrap {
@@ -1489,3 +1490,16 @@ a .on{
     font-size: 12px;
     color: #666;
 }
+
+
+#pagination{
+	
+	
+	margin-bottom: 36px;
+}
+
+.result_list_info strong {
+    color: #ff3c00;
+}
+
+.pagination a:hover {display: inline-block; color: #ff6600; background-color:#fff; text-decoration:underline;}
