--- a/src/main/resources/templates/syBody/syBody.html
+++ b/src/main/resources/templates/syBody/syBody.html
@@ -450,7 +450,7 @@
 
         </div>
         <div>
-            <p class="result_list_info" id="result_list_info"> 총 <strong id="totalCnt">!검색된 숫자 써두기!</strong> 건이 검색되었습니다</p>
+            <p class="result_list_info" id="result_list_info"> 총 <strong id="totalCnt">[[${total}]]</strong> 건이 검색되었습니다</p>
             <div class="select_right wid-auto">
                 <div class="select">
                     <select id="tagUl2" name="sortType" class="iList" title="정렬순서 선택">
@@ -461,10 +461,10 @@
                         <option class="option" value="A">가나다순</option>
                     </select>
                     <select id="tagUl1" name="pageSize" class="iList" title="목록보기 개수 선택" style="">
-                    <option class="option" value="9">9개씩보기</option>
-                    <option class="option" value="18">18개씩보기</option>
-                    <option class="option" value="27">27개씩보기</option></select>
-                    <a href="javascript:;" class="list_apply" title="목록보기 변경시 페이지가 새로고침됩니다">적용</a></div>
+                    <option class="option" value="9" th:selected="${pageVO.amount==9}">9개씩보기</option>
+                    <option class="option" value="18" th:selected="${pageVO.amount==18}">18개씩보기</option>
+                    <option class="option" value="27" th:selected="${pageVO.amount==27}">27개씩보기</option></select>
+                    <a href="javascript:;" onclick="changeAmount()" class="list_apply" title="목록보기 변경시 페이지가 새로고침됩니다">적용</a></div>
                     <span class="list_type"> 
                      <a href="#this01" onclick="javascript:fn_changeListType('D'); return false;" title="선택됨">
                         <img id="detailListImage" th:src="@{/img/icon_board_gallery_on.gif}" alt="갤러리 리스트 보기"></a>
@@ -476,205 +476,17 @@
         </div>
         <div class="board_list jobList">
             <!-- 카드형 -->
-            <div id="searchList"><ul id="JOB_DETAIL_LIST" class="search_result_list">
-<li>
-<a href="syBody1?SEQ=122" onclick="javascript:fn_view(this.href, 122); return false;" class="gallery_job_bx">
-<div class="job_tit_bx">
-    <strong>정밀기기제품제조원</strong>
-    <p>정밀기기제품제조원은 각종 센서, 제어장치 등의 부품을 제작 및 조립하여 현미경, 시계, 카메라 등, 모양은 작지만 다양한 기능을 갖춘 기기들을 제조하는 일을 담당합니다.</p>
-</div>
-<ul class="job_terms_bx">
-    <li>
-        <em>평균연봉</em>
-        <span>4천만원↑</span>
-    </li>
-    <li>
-        <em>일가정균형</em>
-        <span>보통이상</span>
-    </li>
-    <li>
-        <em>사회공헌</em>
-        <span>매우좋음</span>
-    </li>
+            <div id="searchList">
+				<ul id="JOB_DETAIL_LIST" class="search_result_list">
+
+
+
+
+
+
+
 </ul>
-</a>
-</li>
-<li>
-	
-<a href="/cnet/front/base/job/jobView.do?SEQ=355" onclick="javascript:fn_view(this.href, 355); return false;" class="gallery_job_bx">
-<div class="job_tit_bx">
-    <strong>간호조무사</strong>
-    <p>간호조무사는 의료기관 등에서 의사 또는 간호사의 지시에 따라 환자의 간호 및 진로에 관련된 업무를 보조합니다.</p>
 </div>
-<ul class="job_terms_bx">
-    <li>
-        <em>평균연봉</em>
-        <span>3천만원↓</span>
-    </li>
-    <li>
-        <em>일가정균형</em>
-        <span>좋음</span>
-    </li>
-    <li>
-        <em>사회공헌</em>
-        <span>보통미만</span>
-    </li>
-</ul>
-</a>
-</li>
-<li>
-<a href="/cnet/front/base/job/jobView.do?SEQ=309" onclick="javascript:fn_view(this.href, 309); return false;" class="gallery_job_bx">
-<div class="job_tit_bx">
-    <strong>비디오저널리스트(VJ)</strong>
-    <p>비디오저널리스트는 비디오카메라를 가지고 방송물 등을 직접 기획, 취재, 촬영, 편집하는 일을 담당합니다.</p>
-</div>
-<ul class="job_terms_bx">
-    <li>
-        <em>평균연봉</em>
-        <span>4천만원↑</span>
-    </li>
-    <li>
-        <em>일가정균형</em>
-        <span>보통미만</span>
-    </li>
-    <li>
-        <em>사회공헌</em>
-        <span>좋음</span>
-    </li>
-</ul>
-</a>
-</li>
-<li>
-<a href="/cnet/front/base/job/jobView.do?SEQ=951" onclick="javascript:fn_view(this.href, 951); return false;" class="gallery_job_bx">
-<div class="job_tit_bx">
-    <strong>행사기획자</strong>
-    <p>행사기획자는 기업을 홍보하거나 지역 진흥을 위한 전시회, 시사회, 축제, 자동차 시승회, 국제회의 등 다양한 행사의 기획 및 섭외, 실행을 합니다.</p>
-</div>
-<ul class="job_terms_bx">
-    <li>
-        <em>평균연봉</em>
-        <span>3천만원↑</span>
-    </li>
-    <li>
-        <em>일가정균형</em>
-        <span>매우좋음</span>
-    </li>
-    <li>
-        <em>사회공헌</em>
-        <span>보통이상</span>
-    </li>
-</ul>
-</a>
-</li>
-<li>
-<a href="/cnet/front/base/job/jobView.do?SEQ=10066" onclick="javascript:fn_view(this.href, 10066); return false;" class="gallery_job_bx">
-<div class="job_tit_bx">
-    <strong>스포츠기록분석연구원</strong>
-    <p>스포츠기록분석연구원은 각종 스포츠 경기의 모든 요소들을 수치적 데이터로 기록하고 이를 분석하는 일을 전문적으로 수행하는 사람을 말합니다.</p>
-</div>
-<ul class="job_terms_bx">
-    <li>
-        <em>평균연봉</em>
-    </li>
-    <li>
-        <em>일가정균형</em>
-        <span>매우좋음</span>
-    </li>
-    <li>
-        <em>사회공헌</em>
-        <span>좋음</span>
-    </li>
-</ul>
-</a>
-</li>
-<li>
-<a href="/cnet/front/base/job/jobView.do?SEQ=1124" onclick="javascript:fn_view(this.href, 1124); return false;" class="gallery_job_bx">
-<div class="job_tit_bx">
-    <strong>혼례종사원</strong>
-    <p>혼례종사원은 결혼식의 원활한 진행을 위해 의자, 카펫 등을 정리하고 필요한 자료와 물품을 준비하는 등의 일을 담당합니다.</p>
-</div>
-<ul class="job_terms_bx">
-    <li>
-        <em>평균연봉</em>
-        <span>3천만원↓</span>
-    </li>
-    <li>
-        <em>일가정균형</em>
-        <span>보통이상</span>
-    </li>
-    <li>
-        <em>사회공헌</em>
-        <span>보통미만</span>
-    </li>
-</ul>
-</a>
-</li>
-<li>
-<a href="/cnet/front/base/job/jobView.do?SEQ=937" onclick="javascript:fn_view(this.href, 937); return false;" class="gallery_job_bx">
-<div class="job_tit_bx">
-    <strong>시각디자이너</strong>
-    <p>시각디자이너는 다양한 정보가 시각으로 확인되는 이미지를 통해 효율적으로 표현되고 잘 전달될 수 있도록 이미지를 도안하고 표현합니다.</p>
-</div>
-<ul class="job_terms_bx">
-    <li>
-        <em>평균연봉</em>
-        <span>3천만원↑</span>
-    </li>
-    <li>
-        <em>일가정균형</em>
-        <span>보통미만</span>
-    </li>
-    <li>
-        <em>사회공헌</em>
-        <span>보통미만</span>
-    </li>
-</ul>
-</a>
-</li>
-<li>
-<a href="/cnet/front/base/job/jobView.do?SEQ=10074" onclick="javascript:fn_view(this.href, 10074); return false;" class="gallery_job_bx">
-<div class="job_tit_bx">
-    <strong>범죄심리분석관(프로파일러)</strong>
-    <p>범죄심리분석관(프로파일러)은 증거가 충분히 확보되지 않아 일반수사 기법 조사로는 한계가 있는 이상범죄, 연쇄살인 등의 범죄 사건을 담당, 해결하는 역할을 수행합니다.</p>
-</div>
-<ul class="job_terms_bx">
-    <li>
-        <em>평균연봉</em>
-    </li>
-    <li>
-        <em>일가정균형</em>
-        <span>보통이상</span>
-    </li>
-    <li>
-        <em>사회공헌</em>
-        <span>매우좋음</span>
-    </li>
-</ul>
-</a>
-</li>
-<li>
-<a href="/cnet/front/base/job/jobView.do?SEQ=199" onclick="javascript:fn_view(this.href, 199); return false;" class="gallery_job_bx">
-<div class="job_tit_bx">
-    <strong>검사</strong>
-    <p>검사는 법률적 지식을 바탕으로 범죄 사건을 수사하고, 범죄 여부를 판단하기 위해 범죄의 의심을 받는 사람인 피의자에게 법원의 심판을 구하는 일을 담당합니다.</p>
-</div>
-<ul class="job_terms_bx">
-    <li>
-        <em>평균연봉</em>
-        <span>5천만원↑</span>
-    </li>
-    <li>
-        <em>일가정균형</em>
-        <span>좋음</span>
-    </li>
-    <li>
-        <em>사회공헌</em>
-        <span>매우좋음</span>
-    </li>
-</ul>
-</a>
-</li>
-</ul></div>
 
             <!-- 테이블형 -->	
             <table id="JOB_SIMPLE_LIST" summary="번호, 직업명, 분야, 유사직업, 자료로 구성된 표" style="display: none;">
@@ -698,23 +510,17 @@
                 <tbody id="searchTbody"></tbody>
             </table>
         </div>
-        <div id="pagination" class="pagination"><strong>1</strong>&nbsp;
-            <a class="pageBtn" href="#" onclick="fn_page(2);return false; ">2</a>&nbsp;
-            <a class="pageBtn" href="#" onclick="fn_page(3);return false; ">3</a>&nbsp;
-            <a class="pageBtn" href="#" onclick="fn_page(4);return false; ">4</a>&nbsp;
-            <a class="pageBtn" href="#" onclick="fn_page(5);return false; ">5</a>&nbsp;
-            <a class="pageBtn" href="#" onclick="fn_page(6);return false; ">6</a>&nbsp;
-            <a class="pageBtn" href="#" onclick="fn_page(7);return false; ">7</a>&nbsp;
-            <a class="pageBtn" href="#" onclick="fn_page(8);return false; ">8</a>&nbsp;
-            <a class="pageBtn" href="#" onclick="fn_page(9);return false; ">9</a>&nbsp;
-            <a class="pageBtn" href="#" onclick="fn_page(10);return false; ">10</a>&nbsp;
-            <a class="pageBtn" href="#" onclick="fn_page(11);return false; "><img th:src="@{/img/icon_next.gif}" alt="다음"></a>&nbsp;
-            <a class="pageBtn" href="#" onclick="fn_page(60);return false; "><img th:src="@{/img/icon_nextend.gif}" alt="맨뒤" ></a>&nbsp;</div>
+        <div id="pagination" class="pagination">
+			
+            
+            </div>
     </div>
-
 </div>
 	
 	
+
+	
+
 
 </th:block>
 
