--- a/src/main/resources/templates/include/layout.html
+++ b/src/main/resources/templates/include/layout.html
@@ -12,6 +12,23 @@
     <script th:src="@{/js/jquery.js}"></script>
     
     <script th:src="@{/js/layout.js}"></script>
+    
+    <!-- EduBoard - CSS -->
+    <link rel="stylesheet" th:href="@{/css/base.css}" />
+    <link rel="stylesheet" th:href="@{/css/centerlntro.css}" />
+    <link rel="stylesheet" th:href="@{/css/common.css}" />
+    <link rel="stylesheet" th:href="@{/css/common_renew.css}" />
+    <link rel="stylesheet" th:href="@{/css/counsel.css}" />
+    <link rel="stylesheet" th:href="@{/css/edu.css}" />
+    <link rel="stylesheet" th:href="@{/css/main.css}" />
+    <link rel="stylesheet" th:href="@{/css/mycareer.css}" />
+    <link rel="stylesheet" th:href="@{/css/popup.css}" />
+    <link rel="stylesheet" th:href="@{/css/submain.css}" />
+    <link rel="stylesheet" th:href="@{/css/service.css}">
+    <link rel="stylesheet" th:href="@{/css/res_style.css}">
+    <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/jquery-1.7.2.js}"></script>
+    <script th:src="@{/js/jquery.js}"></script>
 </head>
 <body>
 
