--- a/src/main/resources/templates/include/layout.html
+++ b/src/main/resources/templates/include/layout.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" th:href="@{/css/consulting.css}">
     <!--Teacher join css-->
 	<link rel="stylesheet" th:href="@{/css/join.css}">
+    <!--Reply+ Write join css-->
+	<link rel="stylesheet" th:href="@{/css/reply.css}">
 </head>
 <body>
 
