--- a/src/main/resources/templates/teacher/join.html
+++ b/src/main/resources/templates/teacher/join.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{./include/layout :: setContent(~{ :: #tea_container})}">
 	<div id="tea_container">
-	  <form action="joinForm" method="post">
+	  <form action="joinForm" method="post" class="tea_form">
 	
 	    <div class="tea_join_wrap">
 	      <div class="tea_join_container">
@@ -18,20 +18,20 @@
 	            <h3 class="tea_suit">필수입력</h3>
 	
 	            <div class="tea_id">
-	              <input type="text" name="tea_id" title="아이디 입력" placeholder="아이디"
+	              <input type="text" name="tea_id" title="아이디 입력" placeholder="아이디" id="id"
 	                th:value="${teacherVO != null ? teacherVO.tea_id : ''}">[[${tea_tea_id}]]
-	              <button class="tea_ch_btn">중복확인</button><br>
+	              <button class="tea_ch_btn" >중복확인 </button>[[${msg}]]<br>
 	              <p class="tea_p_text" id="tea_p_text">5~20자의 영문 소문자, 숫자와 특수기호 -, _ 만 사용 가능합니다.</p>
 	
 	            </div>
 	
 	            <div class="tea_pw">
-	              <input type="text" name="tea_pw" class="pwcheck" id="password_1" placeholder="비밀번호"
-	                th:value="${teacherVO != null ? teacherVO.tea_pw : ''}">[[${tea_tea_pw}]] </br>
+	              <input type="password" name="tea_pw" class="pwcheck" id="password_1" placeholder="비밀번호"
+	                th:value="${teacherVO != null ? teacherVO.tea_pw : ''}">[[${tea_tea_pw}]] 
 	              <p class="tea_p_text" id="tea_p_text">8~20자의 영문 대/소문자, 숫자, 특수문자 ~`!@#$%^&amp;*()-_=+\| 3개 이상 조합을
 	                입력하세요(공백불가)
 	              </p>
-	              <input type="text" name="tea_pw_ch" class="pwcheck" id="password_2" placeholder="비밀번호 확인"> </br>
+	              <input type="password" name="tea_pw_ch" class="pwcheck" id="password_2" placeholder="비밀번호 확인"> </br>
 	              <div class="alert alert-success" id="alert-success">비밀번호가 일치합니다.</div>
 	              <div class="alert alert-danger" id="alert-danger">비밀번호가 일치하지 않습니다.</div>
 	            </div>
@@ -134,6 +134,8 @@
 	        }
 	      });
 	    });
+	    
+	
 	  </script>
 
 	</div>
